// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game displays a cat's game 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <Board
      onClick={[Function]}
      squares={
        Array [
          Array [
            "X",
            "O",
            "X",
          ],
          Array [
            "X",
            "O",
            "X",
          ],
          Array [
            "O",
            "X",
            "O",
          ],
        ]
      }
    />
  </div>
  <div
    className="game-info"
  >
    <div
      id="status"
    >
      Cat's Game
    </div>
    <ol>
      <li
        key="0"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Game Start
           
        </a>
      </li>
      <li
        key="1"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #1
           
        </a>
      </li>
      <li
        key="2"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #2
           
        </a>
      </li>
      <li
        key="3"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #3
           
        </a>
      </li>
      <li
        key="4"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #4
           
        </a>
      </li>
      <li
        key="5"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #5
           
        </a>
      </li>
      <li
        key="6"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #6
           
        </a>
      </li>
      <li
        key="7"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #7
           
        </a>
      </li>
      <li
        key="8"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #8
           
        </a>
      </li>
      <li
        key="9"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Move #9
           
        </a>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Game displays a new game 1`] = `
<div
  className="game"
>
  <div
    className="game-board"
  >
    <Board
      onClick={[Function]}
      squares={
        Array [
          Array [
            null,
            null,
            null,
          ],
          Array [
            null,
            null,
            null,
          ],
          Array [
            null,
            null,
            null,
          ],
        ]
      }
    />
  </div>
  <div
    className="game-info"
  >
    <div
      id="status"
    >
      Next player: X
    </div>
    <ol>
      <li
        key="0"
      >
        <a
          className="moves"
          href="#"
          onClick={[Function]}
        >
           
          Game Start
           
        </a>
      </li>
    </ol>
  </div>
</div>
`;
